[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "first-price-auction"
version = "0.1.0"
description = "Prime/verifiers single-turn environment for sealed-bid first-price auctions."
readme = "README.md"
tags = ["single-turn", "auctions", "economics", "strategic-reasoning", "eval"]
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "verifiers>=0.1.8",
]

[tool.hatch.build]
include = [
    "auction_env.py",
    "first_price_auction.py",
    "README.md",
    "pyproject.toml",
]
